--- a/task3.1/ssr-task3/components/Registration/components/Form/form.module.scss
+++ b/task3.1/ssr-task3/components/Registration/components/Form/form.module.scss
@@ -50,6 +50,7 @@
 
 .formHeading {
   margin-bottom: 15px;
+  margin-top: 126px;
   text-align: center;
 }
 
@@ -133,8 +134,12 @@
   }
   .form {
      padding-top: 107px;
-
    }
+  .formHeading{
+    margin-bottom: 15px;
+    margin-top: 131px;
+    text-align: center;
+  }
   .submitHolder {
     margin-bottom: 138px;
   }
@@ -153,11 +158,15 @@
     h1 {
       margin-bottom: 27px;
     }
-    .formSubheading {
-      max-width: 364px;
-      line-height: 22px;
-      padding-bottom: 49px;
-    }
+  }
+  .formHeading{
+    margin-top: 94px;
+  }
+  .formSubheading {
+    max-width: 364px;
+    line-height: 22px;
+    padding-bottom: 56px;
+    margin: 0 auto;
   }
 }
 
@@ -181,11 +190,11 @@
     padding: 0;
   }
   .form {
-    >div>div p {
-      padding-bottom: 32px;
-    }
-  }
 
+  }
+  .formSubheading {
+    padding-bottom: 32px;
+  }
   .formPlaceholder {
     display: block !important;
     margin: 0 -15px;
@@ -234,6 +243,10 @@
   }
   .desktopUploadBtn {
     display: none;
+  }
+  .formHeading {
+    margin-top: 45px;
+    margin-bottom: 4px;
   }
 }
 
