--- a/task3.1/ssr-task3/styles/form.scss
+++ b/task3.1/ssr-task3/styles/form.scss
@@ -1,6 +1,6 @@
 .select-component .MuiOutlinedInput-root svg{
   position: absolute;
-  right: 16px;
+  right: 12px;
   z-index: -4;
 }
 
